fixed blurry hero svg in safari

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -491,7 +491,7 @@ nav{
   width:41.85vw;
   align-self:flex-start;
   position:absolute;
-  right:sizes(margin) - 5.21vw;
+  right:9.37vw;
   #box{
     @include respond-to(large){
       transform: translate(0, 0vh);
